# ShaderFlow

./: .gitignore  .gitmodules  404.html  Readme.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  readme.md  sitemap.xml  zensical.toml
.github/workflows/: make-pypi.yml  make-website.yml  release.yml  website.yml
Docs/: index.md
Examples/: Demo.py
Examples/Basic/: Demo.py
Examples/Basic/GLSL/: Bars.frag  Bouncing.frag  Multipass.frag  RayMarch.frag  Visualizer.frag
Examples/Fractals/: Fractals.py
Examples/Fractals/GLSL/: Mandelbrot.frag
Examples/GLSL/: Bars.frag  Bouncing.frag  MotionBlur.frag  Multipass.frag  RayMarch.frag  ShaderToy.frag  Video.frag  Visualizer.frag  Waveform.frag
Examples/GLSL/Life/: Visuals.glsl
Resources/Shaders/Fragment/: Default.glsl
Resources/Shaders/Include/: Prelude.glsl
Resources/Shaders/Vertex/: Default.glsl
Scenes/: Readme.md
Scenes/Examples/: Basic.py
ShaderFlow/: Engine.py  Exceptions.py  Exporting.py  Message.py  Module.py  Notes.py  Scene.py  Server.py  Shader.py  SombreroEngine.py  SombreroModule.py  SombreroScene.py  SombreroShader.py  Texture.py  Variable.py  __init__.py  __main__.py
ShaderFlow/Common/: Notes.py  PianoNotes.py  ShaderVariable.py  __init__.py
ShaderFlow/Core/: Module.py  Scene.py  __init__.py
ShaderFlow/Core/Modules/: Audio.py  Spectrogram.py
ShaderFlow/Imgui/: __init__.py
ShaderFlow/Modules/: Audio.py  Bouncing.py  Camera.py  Depth.py  Dynamics.py  Frametimer.py  Keyboard.py  Noise.py  Piano.py  SombreroCamera.py  SombreroContext.py  SombreroDynamics.py  SombreroNoise.py  SombreroTexture.py  Spectrogram.py  Texture.py  Video.py  Waveform.py  __init__.py
ShaderFlow/Modules/Others/: Bouncing.py  mglw_imbundle.py
ShaderFlow/Modules/Staging/: BetterTexture.py
ShaderFlow/Optional/: Monocular.py
ShaderFlow/Resources/Midis/: Hopeless Sparkle.mid
ShaderFlow/Resources/Scenes/: Readme.md
ShaderFlow/Scenes/: Readme.md
ShaderFlow/Scenes/Examples/: Basic.py
ShaderFlow/Scenes/User/: Readme.md
ShaderFlow/Sombrero/: Readme.md  Sombrero.py  SombreroEngine.py  SombreroMessage.py  SombreroModule.py  SombreroScene.py  SombreroShader.py  __init__.py
ShaderFlow/Sombrero/Common/: PianoNotes.py  ShaderVariable.py  __init__.py
ShaderFlow/Sombrero/Modules/: SombreroAudio.py  SombreroCamera.py  SombreroContext.py  SombreroDynamics.py  SombreroEngine.py  SombreroFrametimer.py  SombreroKeyboard.py  SombreroMouse.py  SombreroNoise.py  SombreroPianoRoll.py  SombreroShader.py  SombreroSpectrogram.py  SombreroTexture.py  SombreroWindow.py  __init__.py
ShaderFlow/Sombrero/Utils/: SombreroFrametimer.py  __init__.py
Website/: controls.md  examples.md  index.md
Website/easy/: examples.md  install.md
Website/get/: index.md
Website/quick/: index.md  install.md
about/changelog/: index.html
about/contact/: index.html
about/roadmap/: index.html
docs/camera/: index.html
docs/module/: index.html
docs/scene/: index.html
docs/scripts/: index.html
docs/shader/: index.html
docs/texture/: index.html
examples/: demo.py  index.html
examples/basic/: demo.py
examples/basic/shaders/: bars.frag  bouncing.frag  motionblur.frag  shadertoy.frag  video.frag  visualizer.frag  waveform.frag
examples/fractals/: fractals.py
examples/fractals/shaders/: mandelbrot.frag  tetration.frag
examples/shaders/: bouncing.frag  shadertoy.frag  video.frag
examples/shaders/life/: simulation.glsl
get/: index.html
get/installers/: index.html
get/source/: index.html
get/wheels/: index.html
modules/camera/: index.html
search/: search_index.json
shaderflow/: __init__.py  __main__.py  audio.py  bouncing.py  camera.py  dynamics.py  exceptions.py  exporting.py  ffmpeg.py  frametimer.py  keyboard.py  launcher.py  message.py  module.py  piano.py  resolution.py  scene.py  scheduler.py  server.py  shader.py  spectrogram.py  texture.py  utils.py  variable.py  video.py  waveform.py
shaderflow/audio/: __init__.py  module.py  spectrogram.py  waveform.py
shaderflow/common/: notes.py
shaderflow/modules/: audio.py  bouncing.py  camera.py  dynamics.py  frametimer.py  keyboard.py  noise.py  piano.py  spectrogram.py  video.py  waveform.py
shaderflow/piano/: __init__.py  module.py  notes.py
shaderflow/temp/: imgui_window.py
website/: CNAME  changelog.md  get.md  make.py  module.md  scene.md  texture.md
website/about/: changelog.md  examples.md  license.md
website/assets/: main.css
website/docs/: camera.md  index.md  module.md  scene.md  scripts.md  shader.md  texture.md
website/easy/: examples.md
website/faq/: general.md  linux.md  macos.md  windows.md
website/get/: docker.md  installers.md  pypi.md  source.md
website/help/: index.md  macos.md  windows.md
website/modules/: camera.md
website/show/: index.md
(+34 files in other folders)
