[project.urls]
Funding   = "https://github.com/sponsors/Tremeschin/"
GitHub    = "https://github.com/BrokenSource/ShaderFlow/"
Changelog = "https://shaders.brokensrc.dev/about/changelog/"
Contact   = "https://shaders.brokensrc.dev/about/contact/"
Docs      = "https://shaders.brokensrc.dev/docs/"
Download  = "https://shaders.brokensrc.dev/get/"
Homepage  = "https://shaders.brokensrc.dev/"

[project]
name        = "shaderflow"
description = "🔥 Modular shader engine designed for simplicity and speed"
authors     = [{name="Tremeschin"}]
dynamic     = ["keywords"]
version     = "0.10.0"
readme      = ".github/readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "broken-source[extra] @ git+https://github.com/BrokenSource/BrokenSource",
    # Math
    "numpy-quaternion~=2024.0.10",
    "opensimplex~=0.4.5.1",
    "scipy~=1.15.3",
    # OpenGL
    "glfw~=2.9.0",
    "glcontext~=3.0.0",
    "moderngl~=5.12.0",
    "moderngl-window~=3.1.1",
    "imgui-bundle<=1.6.3",
    "turbopipe~=1.2.3",
    # Audio / MIDI
    "soundcard~=0.4.4",
    "pyfluidsynth~=1.3.4",
    "midi2audio~=0.1.1",
    "pretty-midi~=0.2.10",
    "mido~=1.3.3",
    # Others
    "ordered-set~=4.1.0",
    "watchdog~=6.0.0",
    "pytimeparse2~=1.7.1",
    "thefuzz~=0.22.1",
]

[project.scripts]
shaderflow = "shaderflow.__main__:main"
shader     = "shaderflow.__main__:main"

[build-system]
requires = ["hatchling", "hook@git+https://github.com/BrokenSource/Hook/"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.plugin]

[tool.hatch.build.targets.wheel]
packages = ["shaderflow"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "shaderflow/resources/examples"

[tool.hatch.metadata]
allow-direct-references = true
