[project]
name        = "shaderflow"
description = "🔥 Modular shader engine designed for simplicity and speed"
authors     = [{name="Tremeschin"}]
dynamic     = ["keywords"]
version     = "0.10.0"
readme      = "readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "broken-source[extra] @ git+https://github.com/BrokenSource/BrokenSource",
    "attrs~=25.0",
    "dearlog",
    "glcontext~=3.0",
    "glfw~=2.10",
    "imgui-bundle~=1.92",
    "moderngl-window~=3.1",
    "moderngl~=5.12",
    "numpy-quaternion",
    "numpy",
    "ordered-set~=4.1",
    "pillow",
    "platformdirs~=4.0",
    "pooch~=1.0",
    "pretty-midi~=0.2",
    "pydantic~=2.0",
    "pyfluidsynth~=1.3",
    "soundcard~=0.4",
    "thefuzz~=0.22",
    "tqdm~=4.0",
    "turbopipe~=1.2.3",
    "typer~=0.24",
    "watchdog~=6.0",
    "xxhash",
]

[project.scripts]
shaderflow = "shaderflow.__main__:main"
shader     = "shaderflow.__main__:main"

[build-system]
requires = ["hatchling", "hook@git+https://github.com/BrokenSource/Hook/"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.plugin]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "shaderflow/resources/examples"

[tool.hatch.metadata]
allow-direct-references = true
